// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInputComponent renders 1`] = `
<tf-select-input>
  <mock:shadow-root>
    <label class="select-input">
      <span class="select-input__label"></span>
      <select class="select-input__input"></select>
      <p class="select-input__hint"></p>
    </label>
  </mock:shadow-root>
</tf-select-input>
`;

exports[`SelectInputComponent renders with values 1`] = `
<tf-select-input>
  <mock:shadow-root>
    <label class="select-input">
      <span class="select-input__label">
        Some Label
      </span>
      <select class="select-input__input">
        <option value="">
          -
        </option>
        <option value="first">
          First Value
        </option>
        <option selected="" value="second">
          Second Value
        </option>
      </select>
      <p class="select-input__hint"></p>
    </label>
  </mock:shadow-root>
</tf-select-input>
`;
